--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,8 +13,8 @@ blocks:
             - checkout
             - docker login -u zejjelthi -p Zakaria@7156
             - 'docker pull $SEMAPHORE_REGISTRY_URL/demo:latest || true'
-            - 'docker build --cache-from $SEMAPHORE_REGISTRY_URL/demo:latest -t $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID .'
-            - 'docker push $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID'
+            - 'docker build --cache-from demo:latest -t demo:$SEMAPHORE_WORKFLOW_ID .'
+            - 'docker push demo:$SEMAPHORE_WORKFLOW_ID'
   - name: Tests
     task:
       prologue:
