--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,7 +14,7 @@ blocks:
             - docker login -u zejjelthi -p Zakaria@7156
             - 'docker pull $SEMAPHORE_REGISTRY_URL/demo:latest || true'
             - 'docker build --cache-from demo:latest -t demo:$SEMAPHORE_WORKFLOW_ID .'
-            - 'docker push demo:$SEMAPHORE_WORKFLOW_ID'
+            - 'docker push zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID'
   - name: Tests
     task:
       prologue:
