--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -19,21 +19,21 @@ blocks:
     task:
       prologue:
         commands:
-          - docker login -u $SEMAPHORE_REGISTRY_USERNAME -p $SEMAPHORE_REGISTRY_PASSWORD $SEMAPHORE_REGISTRY_URL
-          - 'docker pull $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID'
+          - docker login -u zejjelthi -p Zakaria@7156
+          - 'docker pull zejjelthi /demo:$SEMAPHORE_WORKFLOW_ID'
       jobs:
         - name: Unit test
           commands:
-            - 'docker run -it $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID npm run lint'
+            - 'docker run -it zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID npm run lint'
         - name: Functional test
           commands:
             - sem-service start postgres
-            - 'docker run --net=host -it $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID npm run ping'
-            - 'docker run --net=host -it $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID npm run migrate'
+            - 'docker run --net=host -it zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID npm run ping'
+            - 'docker run --net=host -it zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID npm run migrate'
         - name: Integration test
           commands:
             - sem-service start postgres
-            - 'docker run --net=host -it $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID npm run test'
+            - 'docker run --net=host -it zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID npm run test'
   - name: Push
     task:
       jobs:
