--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,7 +5,7 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 blocks:
-  - name: Build1
+  - name: Build
     task:
       jobs:
         - name: docker build
@@ -20,7 +20,7 @@ blocks:
       prologue:
         commands:
           - docker login -u zejjelthi -p Zakaria@7156
-          - 'docker pull zejjelthi /demo:$SEMAPHORE_WORKFLOW_ID'
+          - 'docker pull zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID'
       jobs:
         - name: Unit test
           commands:
