--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -40,6 +40,6 @@ blocks:
         - name: Push
           commands:
             - docker login -u zejjelthi -p Zakaria@7156
-            - 'docker pull $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID'
-            - 'docker tag $SEMAPHORE_REGISTRY_URL/demo:$SEMAPHORE_WORKFLOW_ID $SEMAPHORE_REGISTRY_URL/demo:latest'
-            - 'docker push $SEMAPHORE_REGISTRY_URL/demo:latest'
+            - 'docker pull zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID'
+            - 'docker tag zejjelthi/demo:$SEMAPHORE_WORKFLOW_ID $SEMAPHORE_REGISTRY_URL/demo:latest'
+            - 'docker push zejjelthi/demo:latest'
